Layout bugs: border removed on navbar, sidenav for guide text size fixed and link animation made faster - see #104

--- a/scss/3-global/_sidenav.scss
+++ b/scss/3-global/_sidenav.scss
@@ -1,4 +1,5 @@
 %sidenav {
+  @include rem(font-size, 13px);
   > a {
     @include rem(font-size, 13px);
     @include rem(line-height, 13px);
@@ -9,6 +10,7 @@
     color: $separator-color;
     text-decoration: none;
     text-transform: uppercase;
+    @include rem(font-size, 13px);
     border-bottom: 1px solid $eshill-section-bgcolor;
     &:hover {
       text-decoration: none;
