--- a/scss/3-global/_typography.scss
+++ b/scss/3-global/_typography.scss
@@ -4,7 +4,7 @@ html {
 
 a {
   text-decoration: underline;
-  transition: all ease-in-out .5s;
+  transition: all ease-in-out .2s;
   &:hover,
   &:active,
   &:focus {
